[package]
name = "excertberk"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]

[dependencies]
ggez = "0.3.*"
specs = "0.10.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"


[[bin]]
name = "excertberk"
path = "src/main.rs"

[lib]
name = "eb_core"
path = "eb_core/lib.rs"
